Added animated border for input fields

--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -34,6 +34,7 @@
 		@import "components/form-adv-label";
 		@import "components/form-adv-switch";
 		@import "components/form-adv-textarea";
+		@import "components/form-adv-bar";
 		@import "components/label";
 		@import "components/modal";
 		@import "components/nav";
