--- a/templates/ui-text-field.html
+++ b/templates/ui-text-field.html
@@ -173,10 +173,12 @@
 											<div class="form-group form-group-label">
 												<label class="floating-label" for="doc_floating_label_example">Input</label>
 												<input class="form-control" id="doc_floating_label_example" type="text">
+												<span class="bar"></span>
 											</div>
 											<div class="form-group form-group-label">
 												<label class="floating-label" for="doc_floating_label_example_value">Input with Value</label>
 												<input class="form-control" id="doc_floating_label_example_value" type="text" value="something has already been written down">
+												<span class="bar"></span>
 											</div>
 <pre>
 &lt;div class="form-group form-group-label"&gt;
